--- a/TenantPortal/WebContent/templates/header.html
+++ b/TenantPortal/WebContent/templates/header.html
@@ -2,64 +2,35 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-	 <h:outputStylesheet library="css" name="waystoneTenant.css" /> 
-         <link rel="icon" type ="image/x-icon" href="#{resource['images/Way1.png']}"/>
-    </h:head>
-    <h:body>
-	    <ui:composition>
-                <h:form>
-                    <div id="signOut"> <h:commandLink action="#{Tenant.logout}" value="Sign Out" class="link"></h:commandLink></div>
-                    <div class="title">Waystone Property Management</div>
-                    
-                    <div id="nav">
-                        <ul>
-                            <li class="navList"><h:link value="Home" outcome="employeeAdmin" class="link" /></li>
-                            <li class="navList"><h:link value="My Profile" outcome="employeeProfile" class="link" /></li>
-                            <li class="navList">
-                                <div class="dropdown">
-                                    <h:link value="Company Accounts" outcome="accounts" class="link"/>
-                                        <div class="dropdown-content">
-                                            
-                                                <h:link value="Accounts" outcome="accounts" class="content"/><br/>
-                                                <h:link value="Create New Account" outcome="createAccount" class="content"/>
-                                                                                            
-                                        </div>    
-                                </div>
-                            </li>
-                            <li class="navList">
-                                <div class="dropdown">
-                                    <h:link value="Units" outcome="units" class="link" />
-                                        <div class="dropdown-content">
-                                            
-                                                <h:link value="Unit Search" outcome="units" class="content"/><br/>
-                                                <h:link value="Create New Unit" outcome="createUnit" class="content"/>
-                                                                                            
-                                        </div>    
-                                </div>
-                            </li>
-                            <li class="navList">
-                                <div class="dropdown">
-                                    <h:link value="Tenant Accounts" outcome="tenantAccounts" class="link" id="dropbtn"/>
-                                        <div class="dropdown-content">
-                                            
-                                                <h:link value="Tenant Search" outcome="tenantAccounts" class="content"/><br/>
-                                                <h:link value="Create New Tenant" outcome="insertTenant" class="content"/>                                
-                                           
-                                        </div>    
-                                </div>
-                            </li>    
-                            <li class="navList"><h:link value="Maintenance Requests" outcome="maintenanceRequests" class="link"/></li>
-                            <li class="navList"><h:link value="Training Materials" outcome="training" class="link"/></li>
-                            <li class="navList"><h:link value="Additional Company Information" outcome="companyInfo" class="link"/></li>
-                        </ul>
-                    </div>
-                    
-                    
-                </h:form>
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:h="http://xmlns.jcp.org/jsf/html">
+<h:head>
+	<h:outputStylesheet library="css" name="waystoneTenant.css" />
+</h:head>
+<h:body>
+	<ui:composition>
+		<h:form>
+			<div id="signOut">
+				<h:commandLink action="#{tenant.logout}" value="Sign Out"
+					class="link"></h:commandLink>
+			</div>
+			<div class="title">Waystone Property Management</div>
 
-	    </ui:composition>
-    </h:body>
+			<div id="nav">
+				<ul>
+					<li class="navList"><h:link value="Home"
+							outcome="tenantAdmin.xhtml" class="link" /></li>
+					<li class="navList"><h:link value="Profile"
+							outcome="TenantProfile.xhtml" class="link" /></li>
+					<li class="navList"><h:link value="Payments"
+							outcome="TenantPayment.xhtml" class="link" /></li>
+					<li class="navList"><h:link value="Maintenance Request"
+							outcome="TenantMaintenance.xhtml" class="link" /></li>
+					<li class="navList"><h:link value="Help"
+							outcome="TenantHelp.xhtml" class="link" /></li>
+				</ul>
+			</div>
+		</h:form>
+	</ui:composition>
+</h:body>
 </html>
