--- a/TenantPortal/WebContent/templates/header.html
+++ b/TenantPortal/WebContent/templates/header.html
@@ -14,19 +14,19 @@
 				<h:commandLink action="#{tenant.logout}" value="Sign Out"
 					class="link"></h:commandLink>
 			</div>
-			<div class="title">Waystone Property Management</div>
+			<div class="title">WAYSTONE PROPERTY MANAGEMENT</div>
 
 			<div id="nav">
 				<ul>
 					<li class="navList"><h:link value="Home"
 							outcome="tenantAdmin.xhtml" class="link" /></li>
-					<li class="navList"><h:link value="Profile"
-							outcome="TenantProfile.xhtml" class="link" /></li>
 					<li class="navList"><h:link value="Payments"
 							outcome="TenantPayment.xhtml" class="link" /></li>
 					<li class="navList"><h:link value="Maintenance Request"
 							outcome="TenantMaintenance.xhtml" class="link" /></li>
-					<li class="navList"><h:link value="Help"
+					<li class="navList"><h:link value="Profile"
+							outcome="TenantProfile.xhtml" class="link" /></li>
+					<li class="navList"><h:link value="More Info"
 							outcome="TenantHelp.xhtml" class="link" /></li>
 				</ul>
 			</div>
