--- a/EmployeeLogin/WebContent/templates/commonTemplate.xhtml
+++ b/EmployeeLogin/WebContent/templates/commonTemplate.xhtml
@@ -15,6 +15,7 @@
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <h:outputScript name="js/waystoneEmp.js"/>
+        <title>Waystone Property Management</title>
     </h:head>
 
     <h:body class="intranetBack">
