--- a/EmployeeLogin/WebContent/templates/header.xhtml
+++ b/EmployeeLogin/WebContent/templates/header.xhtml
@@ -12,67 +12,190 @@
 	    <ui:composition>
                 <h:form>
                 	<div class="topHeader">
-                	<div ><img src ="#{resource['images/Way1.png']}" alt="" id="topLogo"/></div>  
+                	<div ><img src ="#{resource['images/Way1.png']}" alt=""  class="topLogo"/></div>  
                     <div id="signOut"> <h:commandLink action="#{employee.logout}" value="Sign Out" class="link"></h:commandLink></div>
                     <div class="title">WAYSTONE PROPERTY MANAGEMENT</div>
                     
-                    <div class="nav">
+                    <h:panelGroup class="nav" layout="block" rendered="#{empRoleObj.role eq 'ADMIN'}">
                         <ul>
                             <li class="navList"><h:link value="Home" outcome="employeeAdmin" class="link" /></li>
-                            <li class="navList">
-                            	<div class="dropdown">
-                                    <h:link value="My Profile" outcome="employeeProfile" class="link"/>
+                            <li class="navList dropdown">
+                                    <h:link value="Employee" outcome="employeeProfile" class="link"/>
                                         <div class="dropdown-content">
-                                        
                                             	<h:link value="My Profile" outcome="employeeProfile" class="content"/><br/>
-                                                <h:link value="Timesheet" outcome="employeeTimesheet" class="content"/>  
-                                                                                
+                                                <h:link value="Timesheet" outcome="employeeTimesheet" class="content"/> <br/>
+                                                <h:link value="Employee Search" outcome="searchEmployees" class="content"/> <br/>
+                                                <h:link value="Create Employee" outcome="createEmployee" class="content"/>                                 
                                         </div>
-                                </div>
                             </li>
-                            <li class="navList">
-                                <div class="dropdown">
-                                    <h:link value="Company Accounts" outcome="accounts" class="link" rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'ACCOUNTS'}"/>
+                            <li class="navList dropdown">
+                                    <h:link value="Company Accounts" outcome="accounts" class="link"/>
                                         <div class="dropdown-content">
-                                            
                                                 <h:link value="Accounts" outcome="accounts" class="content"/><br/>
                                                 <h:link value="Create New Account" outcome="createAccount" class="content"/><br/>
                                                 <h:link value="Create New Record" outcome="createRecord" class="content"/><br/>
                                                 <h:link value="Action Center" outcome="actionCenter" class="content"/><br/>
-                                                <h:link value="General Ledger" outcome="generalLedger" class="content"/>
-                                                                                            
-                                        </div>    
-                                </div>
+                                                <h:link value="General Ledger" outcome="generalLedger" class="content"/>                                           
+                                        </div> 
                             </li>
                             <li class="navList">
                                 <div class="dropdown">
-                                    <h:link value="Units" outcome="units" class="link" rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'ACCOUNTS'}"/>
+                                    <h:link value="Units" outcome="units" class="link"/>
                                         <div class="dropdown-content">
-                                            
                                                 <h:link value="Unit Search" outcome="units" class="content"/><br/>
-                                                <h:link value="Create New Unit" outcome="createUnit" class="content"/>
-                                                                                            
+                                                <h:link value="Create New Unit" outcome="createUnit" class="content"/>                                          
                                         </div>    
                                 </div>
                             </li>
-                            <li class="navList">
-                                <div class="dropdown">
+                            <li class="navList dropdown">
                                     <h:link value="Tenant Accounts" outcome="tenantAccounts" class="link"/>
                                         <div class="dropdown-content">
-                                            
                                                 <h:link value="Tenant Search" outcome="tenantAccounts" class="content"/><br/>
-                                                <h:link value="Create New Tenant" outcome="insertTenant" class="content" rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'ACCOUNTS'}"/>                                
-                                           
+                                                <h:link value="Create New Tenant" outcome="insertTenant" class="content"/>  
+                                        </div> 
+                            </li>    
+                            <li class="navList dropdown">
+                            		<h:link value="Maintenance Requests" outcome="maintenanceRequests" class="link"/>
+                            		<div class="dropdown-content">
+                                                <h:link value="Current Requests" outcome="maintenanceRequests" class="content"/><br/>
+                                                <h:link value="Create New Request" outcome="createMaintenance" class="content"/> 
+                                        </div>
+                            </li>
+                            <li class="navList"><h:link value="Training Materials" outcome="training" class="link"/></li>
+                            <li class="navList dropdown">
+                            	<h:link value="Additional Company Information" outcome="companyInfo" class="link"/>
+                            		<div class="dropdown-content">
+                                                <h:link value="Waystone Properties" outcome="companyInfo" class="content"/><br/>
+                                                <h:link value="Contact Review" outcome="contactReview" class="content"/>
+                                    </div>
+                            </li>
+                        </ul>
+                    </h:panelGroup>
+                    
+                    
+                    <h:panelGroup class="nav" layout="block" rendered="#{empRoleObj.role eq 'CONTRACTOR'}">
+                        <ul>
+                            <li class="navList"><h:link value="Home" outcome="employeeAdmin" class="link" /></li>
+                            <li class="navList dropdown">
+                                    <h:link value="Employee" outcome="employeeProfile" class="link"/>
+                                        <div class="dropdown-content">
+                                            	<h:link value="My Profile" outcome="employeeProfile" class="content"/><br/>
+                                                <h:link value="Timesheet" outcome="employeeTimesheet" class="content"/> <br/>
+                                                <h:link value="Employee Search" outcome="searchEmployees" class="content"/>                                
+                                        </div>
+                            </li>
+                            <li class="navList">
+                                <div class="dropdown">
+                                    <h:link value="Units" outcome="units" class="link"/>
+                                        <div class="dropdown-content">
+                                                <h:link value="Unit Search" outcome="units" class="content"/>                        
                                         </div>    
                                 </div>
+                            </li>
+                            <li class="navList dropdown">
+                                    <h:link value="Tenant Accounts" outcome="tenantAccounts" class="link"/>
+                                        <div class="dropdown-content">
+                                                <h:link value="Tenant Search" outcome="tenantAccounts" class="content"/>
+                                        </div>  
                             </li>    
-                            <li class="navList"><h:link value="Maintenance Requests" outcome="maintenanceRequests" class="link" rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'CONTRACTOR'}"/></li>
+                            <li class="navList dropdown">
+                            		<h:link value="Maintenance Requests" outcome="maintenanceRequests" class="link"/>
+                            		<div class="dropdown-content">
+                                                <h:link value="Current Requests" outcome="maintenanceRequests" class="content"/><br/>
+                                                <h:link value="Create New Request" outcome="createMaintenance" class="content"/>
+                                        </div>
+                            </li>
                             <li class="navList"><h:link value="Training Materials" outcome="training" class="link"/></li>
-                            <li class="navList"><h:link value="Additional Company Information" outcome="companyInfo" class="link"/></li>
+                            <li class="navList dropdown">
+                            	<h:link value="Additional Company Information" outcome="companyInfo" class="link"/>
+                            		<div class="dropdown-content">
+                                                <h:link value="Waystone Properties" outcome="companyInfo" class="content"/>
+                                    </div>
+                            </li>
                         </ul>
-                    </div>
+                    </h:panelGroup>
                     
+                    <h:panelGroup class="nav" layout="block" rendered="#{empRoleObj.role eq 'HR'}">
+                        <ul>
+                            <li class="navList"><h:link value="Home" outcome="employeeAdmin" class="link" /></li>
+                            <li class="navList dropdown">
+                                    <h:link value="Employee" outcome="employeeProfile" class="link"/>
+                                        <div class="dropdown-content">
+                                            	<h:link value="My Profile" outcome="employeeProfile" class="content"/><br/>
+                                                <h:link value="Timesheet" outcome="employeeTimesheet" class="content"/> <br/>
+                                                <h:link value="Employee Search" outcome="searchEmployees" class="content"/> <br/>
+                                                <h:link value="Create Employee" outcome="createEmployee" class="content"/>                                 
+                                        </div>
+                            </li>
+                            <li class="navList">
+                                <div class="dropdown">
+                                    <h:link value="Units" outcome="units" class="link"/>
+                                        <div class="dropdown-content">
+                                                <h:link value="Unit Search" outcome="units" class="content"/>                                          
+                                        </div>    
+                                </div>
+                            </li>
+                            <li class="navList dropdown">
+                                    <h:link value="Tenant Accounts" outcome="tenantAccounts" class="link"/>
+                                        <div class="dropdown-content">
+                                                <h:link value="Tenant Search" outcome="tenantAccounts" class="content"/><br/>
+                                                <h:link value="Create New Tenant" outcome="insertTenant" class="content"/>  
+                                        </div> 
+                            </li>
+                            <li class="navList"><h:link value="Training Materials" outcome="training" class="link"/></li>
+                            <li class="navList dropdown">
+                            	<h:link value="Additional Company Information" outcome="companyInfo" class="link"/>
+                            		<div class="dropdown-content">
+                                                <h:link value="Waystone Properties" outcome="companyInfo" class="content"/><br/>
+                                                <h:link value="Contact Review" outcome="contactReview" class="content"/>
+                                    </div>
+                            </li>
+                        </ul>
+                    </h:panelGroup>
                     
+                    <h:panelGroup class="nav" layout="block" rendered="#{empRoleObj.role eq 'OFFICE'}">
+                        <ul>
+                            <li class="navList"><h:link value="Home" outcome="employeeAdmin" class="link" /></li>
+                            <li class="navList dropdown">
+                                    <h:link value="Employee" outcome="employeeProfile" class="link"/>
+                                        <div class="dropdown-content">
+                                            	<h:link value="My Profile" outcome="employeeProfile" class="content"/><br/>
+                                                <h:link value="Timesheet" outcome="employeeTimesheet" class="content"/> <br/>
+                                                <h:link value="Employee Search" outcome="searchEmployees" class="content"/>                                  
+                                        </div>
+                            </li>
+                            <li class="navList">
+                                <div class="dropdown">
+                                    <h:link value="Units" outcome="units" class="link"/>
+                                        <div class="dropdown-content">
+                                                <h:link value="Unit Search" outcome="units" class="content"/><br/>
+                                                <h:link value="Create New Unit" outcome="createUnit" class="content"/>                                          
+                                        </div>    
+                                </div>
+                            </li>
+                            <li class="navList dropdown">
+                                    <h:link value="Tenant Accounts" outcome="tenantAccounts" class="link"/>
+                                        <div class="dropdown-content">
+                                                <h:link value="Tenant Search" outcome="tenantAccounts" class="content"/><br/>
+                                                <h:link value="Create New Tenant" outcome="insertTenant" class="content"/>  
+                                        </div> 
+                            </li>    
+                            <li class="navList dropdown">
+                            		<h:link value="Maintenance Requests" outcome="maintenanceRequests" class="link"/>
+                            		<div class="dropdown-content">
+                                                <h:link value="Create New Request" outcome="createMaintenance" class="content"/> 
+                                        </div>
+                            </li>
+                            <li class="navList"><h:link value="Training Materials" outcome="training" class="link"/></li>
+                            <li class="navList dropdown">
+                            	<h:link value="Additional Company Information" outcome="companyInfo" class="link"/>
+                            		<div class="dropdown-content">
+                                                <h:link value="Waystone Properties" outcome="companyInfo" class="content"/><br/>
+                                                <h:link value="Contact Review" outcome="contactReview" class="content"/>
+                                    </div>
+                            </li>
+                        </ul>
+                    </h:panelGroup>
                    
                     <div id="primary_nav_wrap">
                     	<ul>
@@ -112,7 +235,6 @@
                             		<li class="contentMenu"><h:link value="Maintenance Requests" outcome="maintenanceRequests" class="linkMenu"/></li>
                             		<li class="contentMenu"><h:link value="Training Materials" outcome="training" class="linkMenu"/></li>
                             		<li class="contentMenu"><h:link value="Additional Company Information" outcome="companyInfo" class="linkMenu"/></li>
-                            
                         	</ul>
                           </li>
                         </ul>
