--- a/EmployeeLogin/WebContent/resources/css/waystoneEmployee.css
+++ b/EmployeeLogin/WebContent/resources/css/waystoneEmployee.css
@@ -29,7 +29,7 @@ html body{
 	padding: 0;
 	
 }
-#nav {
+.nav {
 	background-color: rgba(255,255,255,1);
 	height: 1.2em;
 	text-align: center;
@@ -652,6 +652,13 @@ div ul {
     text-align: center;
     font-size: 1.2em;
     font-family:"Merriweather";
+}
+.recTitle{
+    text-align: center !important;
+    font-size: 1em;
+    font-family:"Merriweather";
+    margin:auto;
+    font-weight:bold;
 }
 .profileBox {
     padding: 10px;
