--- a/EmployeeLogin/WebContent/templates/header.xhtml
+++ b/EmployeeLogin/WebContent/templates/header.xhtml
@@ -197,6 +197,55 @@
                         </ul>
                     </h:panelGroup>
                    
+                   
+                    <h:panelGroup class="nav" layout="block" rendered="#{empRoleObj.role eq 'ACCOUNTS'}">
+                        <ul>
+                            <li class="navList"><h:link value="Home" outcome="employeeAdmin" class="link" /></li>
+                            <li class="navList dropdown">
+                                    <h:link value="Employee" outcome="employeeProfile" class="link"/>
+                                        <div class="dropdown-content">
+                                            	<h:link value="My Profile" outcome="employeeProfile" class="content"/><br/>
+                                                <h:link value="Timesheet" outcome="employeeTimesheet" class="content"/> <br/>
+                                                <h:link value="Employee Search" outcome="searchEmployees" class="content"/>                                 
+                                        </div>
+                            </li>
+                            <li class="navList dropdown">
+                                    <h:link value="Company Accounts" outcome="accounts" class="link"/>
+                                        <div class="dropdown-content">
+                                                <h:link value="Accounts" outcome="accounts" class="content"/><br/>
+                                                <h:link value="Create New Account" outcome="createAccount" class="content"/><br/>
+                                                <h:link value="Create New Record" outcome="createRecord" class="content"/><br/>
+                                                <h:link value="Action Center" outcome="actionCenter" class="content"/><br/>
+                                                <h:link value="General Ledger" outcome="generalLedger" class="content"/>                                           
+                                        </div> 
+                            </li>
+                            <li class="navList">
+                                <div class="dropdown">
+                                    <h:link value="Units" outcome="units" class="link"/>
+                                        <div class="dropdown-content">
+                                                <h:link value="Unit Search" outcome="units" class="content"/><br/>
+                                                <h:link value="Create New Unit" outcome="createUnit" class="content"/>                                          
+                                        </div>    
+                                </div>
+                            </li>
+                            <li class="navList dropdown">
+                                    <h:link value="Tenant Accounts" outcome="tenantAccounts" class="link"/>
+                                        <div class="dropdown-content">
+                                                <h:link value="Tenant Search" outcome="tenantAccounts" class="content"/><br/>
+                                                <h:link value="Create New Tenant" outcome="insertTenant" class="content"/>  
+                                        </div> 
+                            </li>
+                            <li class="navList"><h:link value="Training Materials" outcome="training" class="link"/></li>
+                            <li class="navList dropdown">
+                            	<h:link value="Additional Company Information" outcome="companyInfo" class="link"/>
+                            		<div class="dropdown-content">
+                                                <h:link value="Waystone Properties" outcome="companyInfo" class="content"/>
+                                    </div>
+                            </li>
+                        </ul>
+                    </h:panelGroup>
+                    
+                    
                     <div id="primary_nav_wrap">
                     	<ul>
                     		<li class="has-dropdown contentMenu"><h:outputText value="Menu" class="linkMenu" />
