--- a/TenantPortal/WebContent/templates/content.xhtml
+++ b/TenantPortal/WebContent/templates/content.xhtml
@@ -2,22 +2,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-          
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-	 <h:outputStylesheet library="css" name="waystoneTenant.css" /> 
-          <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
-            <link rel="stylesheet" href="/resources/demos/style.css"/>
-        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <h:outputScript name="js/waystoneTenant.js"/>
-    </h:head>
-    <body>
-	    <ui:composition>
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:h="http://xmlns.jcp.org/jsf/html">
+<h:head>
+	<h:outputStylesheet library="css" name="waystoneTenant.css" />
+	<link rel="stylesheet"
+		href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+	<link rel="stylesheet" href="/resources/demos/style.css" />
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<h:outputScript name="js/waystoneTenant.js" />
+</h:head>
+<body>
+	<ui:composition>
 
 		<h1>This is default content</h1>
 
-	    </ui:composition>
-    </body>
+	</ui:composition>
+</body>
 </html>
