--- a/EmployeeLogin/WebContent/templates/header.xhtml
+++ b/EmployeeLogin/WebContent/templates/header.xhtml
@@ -23,19 +23,19 @@
                                     <h:link value="Employee" outcome="employeeProfile" class="link"/>
                                         <div class="dropdown-content">
                                             	<h:link value="My Profile" outcome="employeeProfile" class="content"/><br/>
-                                                <h:link value="Timesheet" outcome="employeeTimesheet" class="content"/> <br/>
                                                 <h:link value="Employee Search" outcome="searchEmployees" class="content"/> <br/>
                                                 <h:link value="Create Employee" outcome="createEmployee" class="content"/>                                 
                                         </div>
                             </li>
                             <li class="navList dropdown">
-                                    <h:link value="Company Accounts" outcome="accounts" class="link"/>
+                                    <h:link value="Action Center" outcome="actionCenter" class="link"/>
                                         <div class="dropdown-content">
+                                        		<h:link value="Action Center" outcome="actionCenter" class="content"/><br/>
+                                                <h:link value="General Ledger" outcome="generalLedger" class="content"/> <br/>
                                                 <h:link value="Accounts" outcome="accounts" class="content"/><br/>
                                                 <h:link value="Create New Account" outcome="createAccount" class="content"/><br/>
                                                 <h:link value="Create New Record" outcome="createRecord" class="content"/><br/>
-                                                <h:link value="Action Center" outcome="actionCenter" class="content"/><br/>
-                                                <h:link value="General Ledger" outcome="generalLedger" class="content"/>                                           
+                                                <h:link value="Inventory" outcome="inventory" class="content" />                                          
                                         </div> 
                             </li>
                             <li class="navList">
